teams CRUD, refactoring
