# backend/Services/UserService/UserService.API/DTOs/Users/UserDto.cs
@@ -1,0 +1,15 @@
+namespace UserService.API.DTOs.Users;
+
+public class UserDto: UserBaseDto
+{
+    public DateTime CreatedAt { get; set; }
+    public DateTime UpdatedAt { get; set; }
+}
+
+public class UserBaseDto
+{
+    public Guid Id { get; set; }
+    public string Email { get; set; } = string.Empty;
+    public string FirstName { get; set; } = string.Empty;
+    public string LastName { get; set; } = string.Empty;
+}
