# backend/Services/UserService/UserService.API/Endpoints/UserEndpoints.cs
@@ -1,6 +1,9 @@
 using Asp.Versioning;
+using Microsoft.AspNetCore.Mvc;
 using Shared;
 using Shared.Domain;
+using UserService.API.DTOs.Users;
+using UserService.API.Mappers;
 using UserService.Domain.Entities;
 using UserService.Domain.Repositories;
 
@@ -12,35 +15,42 @@ public static class UserEndpoints
     {
         var group = routes.MapGroup("users");
         
-        group.MapGet("/{id:guid}", async (Guid id, IUserRepository userRepository) =>
+        group.MapGet("/{id:guid}", async (Guid id, [FromServices] IUserRepository userRepository) =>
         {
             var user = await userRepository.GetByIdAsync(id);
-            return user is not null ? Results.Ok(user) : Results.NotFound();
+            return user is not null ? Results.Ok(user.Map()) : Results.NotFound();
         })
         .WithName("GetUserById");
 
-        group.MapGet("/by-email/{email}", async (string email, IUserRepository userRepository) =>
+        group.MapGet("/by-email/{email}", async (string email, [FromServices] IUserRepository userRepository) =>
         {
             var user = await userRepository.GetByEmailAsync(email);
-            return user is not null ? Results.Ok(user) : Results.NotFound();
+            return user is not null ? Results.Ok(user.Map()) : Results.NotFound();
         })
         .WithName("GetUserByEmail");
 
-        group.MapGet("/", async ([AsParameters] Query query, IUserRepository userRepository) =>
+        group.MapGet("/", async ([AsParameters] Query query, [FromServices] IUserRepository userRepository) =>
             {
                 var users = await userRepository.GetAllAsync(query);
-                return Results.Ok(users);
+                return Results.Ok(users.MapItems(u => u.Map()));
             })
             .WithName("GetAllUsers");
         
-        group.MapPost("/", async (User user, IUserRepository userRepository) =>
+        group.MapGet("/{id:guid}/teams", async (Guid id, [AsParameters] Query query, [FromServices] IUserRepository userRepository) =>
+            {
+                var users = await userRepository.GetTeamsAsync(id, query);
+                return Results.Ok(users.MapItems(t => t.Map()));
+            })
+            .WithName("GetUserTeams");
+        
+        group.MapPost("/", async ([FromBody] CreateUserDto user, [FromServices] IUserRepository userRepository) =>
         {
-            var createdUser = await userRepository.CreateAsync(user);
+            var createdUser = await userRepository.CreateAsync(user.Map());
             return Results.Created($"/api/users/{createdUser.Id}", createdUser);
         })
         .WithName("CreateUser");
 
-        group.MapPut("/{id:guid}", async (Guid id, User user, IUserRepository userRepository) =>
+        group.MapPut("/{id:guid}", async (Guid id, [FromBody] UpdateUserDto user, [FromServices] IUserRepository userRepository) =>
         {
             if (id != user.Id)
             {
@@ -53,12 +63,12 @@ public static class UserEndpoints
                 return Results.NotFound();
             }
 
-            var updatedUser = await userRepository.UpdateAsync(user);
+            var updatedUser = await userRepository.UpdateAsync(user.Map());
             return Results.Ok(updatedUser);
         })
         .WithName("UpdateUser");
 
-        group.MapDelete("/{id:guid}", async (Guid id, IUserRepository userRepository) =>
+        group.MapDelete("/{id:guid}", async (Guid id, [FromServices] IUserRepository userRepository) =>
         {
             var exists = await userRepository.ExistsAsync(id);
             if (!exists)
